--- a/trunk/intro.tex
+++ b/trunk/intro.tex
@@ -195,21 +195,21 @@ parts:
   simulations and to aid in the data collection and analysis of the
   results. These user interfaces are described in section~\ref{s:frontends}.
 \item The \MCS\ meta-language is described in chapter~\ref{s:kernel}. This
-  chapter also describes a set of ibrary functions and definitions
+  chapter also describes a set of library functions and definitions
   that aid in the writing of simulations. See
   appendix~\ref{c:kernelcalls} for more details.
-\item Chapter~\ref{s:MCtechniques} concernts Monte Carlo techniques
+\item Chapter~\ref{s:MCtechniques} concerns Monte Carlo techniques
   and simulation strategies in general
 \item The \MCS\ component library contains a collection of
   well-tested, as well as user contributed, beam components that can be used in simulations.
   The \MCS\ component library is documented in a separate manual
   and on the \MCS\ web-page~\cite{mcstas_webpage}, but a short overview of these
-  components is given in chapter~\ref{s:comp-overview}.
+  components is given in chapter~\ref{s:comp-overview} of the Manual.
   %This
   %library is documented in detail in chapter~\ref{s:components}. Code
   %for the components can be found in appendix~\ref{compcode}.
 \item A collection of example instrument definitions is described in
-  chapter~\ref{s:instrument}.%, with source code given in appendix~\ref{instcode}.
+  chapter~\ref{s:instrument} of the Manual.%, with source code given in appendix~\ref{instcode}.
 
 \end{itemize}
 
@@ -219,9 +219,8 @@ parts:
 A list of library calls that may be used in component definitions 
 appears in appendix~\ref{c:kernelcalls}, and
 an explanation of the \MCS\ terminology can be
-found in appendix~\ref{s:terminology}.
-Plans for future extensions are presented on the \MCS\ web-page~\cite{mcstas_webpage}.
-A separate component manual will appear during 2003, see the \MCS\ web-page.
+found in appendix~\ref{s:terminology} of the Manual..
+Plans for future extensions are presented on the \MCS\ web-page~\cite{mcstas_webpage} as well as in section~\ref{c:future}.
 
 
 %The \MCS\ package consists of four levels:
