--- a/trunk/manual.tex
+++ b/trunk/manual.tex
@@ -86,10 +86,11 @@
 \include{running}
 \include{kernel}
 \include{techniq}
-%\include{comp}
+%\include{comp} % now in separate Manual
 \include{comp_removed}
 \include{instrum}
-%\include{future}
+%\include{test}   % now in instrum
+%\include{future} % now in changes
 
 \appendix
 \include{kernelcalls}
