--- a/trunk/preface.tex
+++ b/trunk/preface.tex
@@ -39,3 +39,5 @@ In case of any errors, questions, or suggestions, %or other need for support sho
 %do not hesitate to 
 contact the authors at \verb+mcstas@risoe.dk+
 or consult the \MCS\ WWW home page~\cite{mcstas_webpage}.
+
+If you {\bf appreciate} this software, please subscribe to the \verb+neutron-mc@risoe.dk+ email list, send us a smiley message, and contribute to the package.
